--- a/UI/WebContent/app/css/mkttable.css
+++ b/UI/WebContent/app/css/mkttable.css
@@ -7,13 +7,34 @@
     position: relative;
 
 }
+#gridNormal1 .maxtbody
+{
+    overflow-y: auto;
+    box-sizing: border-box;
+    width: 100%;
+    height: 300px;
+    position: relative;
+
+}
 #gridNormal .tableScroll
 {
     overflow-y: scroll;
     height: 100%;
     width: 100%;
 }
+#gridNormal1 .tableScroll
+{
+    overflow-y: scroll;
+    height: 100%;
+    width: 100%;
+}
+
 #gridNormal tr {
+    width: 100%;
+    display: flex;
+	    border-bottom: 1px solid rgba(0, 128, 0, 0.15);
+}
+#gridNormal1 tr {
     width: 100%;
     display: flex;
 	    border-bottom: 1px solid rgba(0, 128, 0, 0.15);
@@ -21,7 +42,13 @@
 
 #gridNormal td {
    width:20%;
-   padding: 4px 5px 3px 10px;
+    padding: 5px 0px 4px 10px;
+      border-right: 1px solid #c1c1c1;
+      
+}
+#gridNormal1 td {
+   width:20%;
+    padding: 5px 0px 4px 10px;
       border-right: 1px solid #c1c1c1;
       
 }
@@ -31,7 +58,22 @@ width: 100%;
     height: 100%;
     margin-bottom: 0px !important;
 }
+#gridNormal1 table
+{
+width: 100%;
+    height: 100%;
+    margin-bottom: 0px !important;
+}
 #gridNormal .tableHeader
+{
+   width: 100%;
+    display: flex;
+    background-color: #ffffff;
+    color: #222;
+    font-size: 1.1em;
+    padding-right: 17px;
+}
+#gridNormal1 .tableHeader
 {
    width: 100%;
     display: flex;
@@ -51,8 +93,29 @@ display: flex;
     bottom: 0px;
     width: 100%;
 }
+#gridNormal1 .tableFooter
+{
+display: flex;
+	background-color: #8DDCB9;
+    color: white;
+    font-size: 1.1em;
+	    position: absolute;
+    bottom: 0px;
+    width: 100%;
+}
 
 #gridNormal .tableHeader p,#gridNormal .tableFooter p{
+width: 20%;
+    margin: 0px;
+    padding: 5px 0px 4px 10px;
+    overflow-wrap: break-word;
+    box-sizing: border-box;
+    font-size: 12px;
+        border-right: 1px solid #c1c1c1;
+        border-bottom: 1px solid #c1c1c1;
+            font-weight: 600;
+}
+#gridNormal1 .tableHeader p,#gridNormal .tableFooter p{
 width: 20%;
     margin: 0px;
     padding: 5px 0px 4px 10px;
